--- a/basiswebsite/index.html
+++ b/basiswebsite/index.html
@@ -1,21 +1,156 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Rens Lous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>GOLF Le FLEUR* - homepage</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/index_style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
-
-	<script defer src="scripts/script.js"></script>
+	<header>
+		<div>
+			<img src="images/hondje_logo.png" alt="">
+		</div> 
+		<a href=""><img src="images/lefleur_logo.png" alt=""></a>
+		<button>Menu</button>
+		<button>Cart(0)</button>
+		<section>
+			<h2>Menu and navigation</h2>
+			<div>
+				<nav>
+					<ul>
+						<li>
+							<a href="#">Fragrance</a>
+						</li>
+						<li>
+							<a href="#">All</a>
+						</li>
+						<li>
+							<a href="#">Apparel</a>
+						</li>
+						<li>
+							<a href="#">Eyewear</a>
+						</li>
+						<li>
+							<a href="#">Accessories</a>
+						</li>
+						<li>
+							<a href="#">Luggage</a>
+						</li>
+						<li>
+							<a href="#">Nail Polish</a>
+						</li>
+						<li>
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<a href="#">Catalogue</a>
+						</li>
+					</ul>
+				</nav>
+				<nav>
+					<ul>
+						<li>
+							<a href="#">instagram</a>
+						</li>
+						<li>
+							<a href="#">privacy</a>
+						</li>
+						<li>
+							<a href="#">accessibility</a>
+						</li>
+						<li>
+							<a href="#">terms</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<a>Subscribe to our newsletter</a> 
+			<p>GOLF le FLEUR* 2024 </p>
+			<p>All rights reserverd</p>
+		</section>
+		<section>
+			<h2>Shopping cart</h2>
+			<p>Your cart is empty.</p>
+		</section>
+	</header>
+	<main>
+		<div></div>
+		<section>
+			<h2>Darryl Chucks</h2>
+			<a href="">Darryl chucks available now</a>
+		</section>
+		<section>
+			<h2>Fitted Hats</h2>
+			<a href="">F* fitted hat available now</a>
+		</section>
+		<section>
+			<h2>Darryl Polos</h2>
+			<a href="">Darryl polo live now</a>
+		</section>
+		<section>
+			<h2>All Items</h2>
+			<a href="">Shop all items</a>
+		</section>
+		<section>
+			<h2>Photos</h2>
+			<ul>
+				<li>
+					<img src="images/carousel1.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel2.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel3.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel4.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel5.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel6.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel7.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel8.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel9.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel10.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel11.jpg" alt="">
+				</li>
+				<li>
+					<img src="images/carousel12.jpg" alt="">
+				</li>
+			</ul>
+			<div>
+				<button>u</button>
+				<button>u</button>
+			</div>
+		</section>
+		<section>
+			<h2>Nail Polish</h2>
+			<a href="">Shop all items</a>
+		</section>
+	</main>
+	<script src="scripts/script.js"></script>
+	<script src="scripts/carousel.js"></script>
 </body>
 	
 </html>
