--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 		<div></div>
 		<section>
 			<h2>Darryl Chucks</h2>
-			<a href="">Darryl chucks available now</a>
+			<a href="product_page.html">Darryl chucks available now</a>
 		</section>
 		<section>
 			<h2>Fitted Hats</h2>
-			<a href="">F* fitted hat available now</a>
+			<a href="product_page.html">F* fitted hat available now</a>
 		</section>
 		<section>
 			<h2>Darryl Polos</h2>
-			<a href="">Darryl polo live now</a>
+			<a href="product_page.html">Darryl polo live now</a>
 		</section>
 		<section>
 			<h2>All Items</h2>
@@ -146,7 +146,7 @@
 		</section>
 		<section>
 			<h2>Nail Polish</h2>
-			<a href="">Shop all items</a>
+			<a href="product_page.html">Shop all items</a>
 		</section>
 	</main>
 	<script src="scripts/script.js"></script>
